CHROMIUM: mm: checking min_filelist_kbytes in global reclaim

There are 2 types of memory reclaim: 1. global reclaim is triggered when
system free memory is under global memory watermark. 2. memcg reclaim is
triggered when memory usage of a memcg exceeded its limit. Reserving
file pages in global reclaim is sufficient to avoid system-wide file
page thrashing. Reserving file pages in memcg reclaim requires
min_filelist_kbytes settings for each memcg, it can be done when needed.

BUG=chromium:894349
TEST=checking meminfo file page size in low memory condition

Change-Id: Id78a45e117ac4b54c12f8b722d4cc7d357594345
Signed-off-by: Kuo-Hsin Yang <vovoy@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/1372671
Commit-Ready: ChromeOS CL Exonerator Bot <chromiumos-cl-exonerator@appspot.gserviceaccount.com>
Tested-by: Sonny Rao <sonnyrao@chromium.org>
Reviewed-by: Vovo Yang <vovoy@chromium.org>